Finished the header/nav

--- a/index.html
+++ b/index.html
@@ -49,12 +49,8 @@
       <p><i class="mdi mdi-lock-outline" aria-hidden="true"></i> Privacy</p>
     </div>
   </div>
-<div class="nav">
-    <ul>
-        <li>Your projects</li>
-        <li>Announcements</li>
-    </ul>
-</div>
+        <h1 class="tn">Your projects</h1>
+
 
   <div class="article">
     <div class="card">
