aligned the aside class and the trending class

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
     </div>
   </div> 
   <div class="main">
+    <div class="text">
         <h2 class="tn">Your projects</h2>
+        <h2 class="An">Announcements</h2>
+        </div>
+        <div class="content">
   <div class="article">
     <div class="card">
         <p class="title">Super Cool Project</p>
@@ -83,24 +87,43 @@
         <p class="sign"><i class="mdi mdi-star-plus" aria-hidden="true"></i> <i class="mdi mdi-eye-plus-outline" aria-hidden="true"></i> <i class="mdi mdi-source-fork" aria-hidden="true"></i> </p>
     </div>
     </div>
+    <div class="aside">
+        <div class="ans">
     <div class="side">
-        <div> <strong>Site Maintenance</strong></div>
+        <div> <strong>Site Maintenance</strong>
             <p>Vestibulum condimentum tellus lacus, <br> in accumsan elit maximus ac. Donec<br> hendrerit sodales congue...</p>
-            <div> <strong>Community Share Day</strong></div>
+            </div>
+            <div> <strong>Community Share Day</strong>
             <p>Nam vel lectus tincidunt, rutrum nulla<br>eu, ornare libero. Aliquam dictum<br> accumsan porttitor...</p>
-            <div> <strong>Update Pirvacy Policy</strong></div>
+           </div>
+            <div> <strong>Update Pirvacy Policy</strong>
             <p>Phasellus efficitur nisi eget elit  <br> consectrtur, eget condimentum ante<br> auctor. Cras fringilla sagittis sem in <br> mattis...</p> 
-    </div>
+            </div>
+            </div>
+            </div>
+            <div class="trs">
+            <h2 class="tr">Trending</h2>
     <div class="trending">
-        <div>@tegan</div>
+        <div class="people">
+        <div><strong>@tegan</strong></div>
         <p>World Peace Builder</p>
-        <div>@morgan</div>
+        </div>
+        <div class="people">
+        <div><strong>@morgan</strong></div>
         <p>Super Cool Project</p>
-        <div>@Kendall</div>
+        </div>
+        <div class="people">
+        <div><strong>@Kendall</strong></div>
         <p>Life Changing App</p>
-        <div>@alex</div>
+        </div>
+        <div class="people">
+        <div><strong>@alex</strong></div>
         <p>No Traffic Maker</p>
+        </div>
     </div>
+    </div>
+    </div>
+  </div>
   </div>
   </div>
 </body>
