The Admin Dashboard full display

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </div>
     <div class="small-logo">
         <i class="mdi mdi-bell-outline" aria-hidden="true"></i> 
-        <img src="C:\Users\User\Downloads\ChatGPT Image Aug 24, 2025, 08_17_53 AM.png" alt="Morgan Oakley" class="side-avatar" />
+        <img src="C:\Users\User\Downloads\ChatGPT Image Aug 24, 2025, 08_17_53 AM.png" alt="Morgan Oakley" class="side-avatar" >
         <p>Morgan Oakley</p>
     </div>
     <div class="logo">
         <div class="user-profile">
-            <img src="C:\Users\User\Downloads\ChatGPT Image Aug 24, 2025, 08_17_53 AM.png" alt="Morgan Oakley" class="avatar" />
+            <img src="C:\Users\User\Downloads\ChatGPT Image Aug 24, 2025, 08_17_53 AM.png" alt="Morgan Oakley" class="avatar" >
             <p class="hi">Hi there.</p>
             <span class="username">Morgan Oakley(@morgan)</span>
           </div>
@@ -90,10 +90,10 @@
     <div class="aside">
         <div class="ans">
     <div class="side">
-        <div> <strong>Site Maintenance</strong>
+        <div class="line"> <strong>Site Maintenance</strong>
             <p>Vestibulum condimentum tellus lacus, <br> in accumsan elit maximus ac. Donec<br> hendrerit sodales congue...</p>
             </div>
-            <div> <strong>Community Share Day</strong>
+            <div class="line"> <strong>Community Share Day</strong>
             <p>Nam vel lectus tincidunt, rutrum nulla<br>eu, ornare libero. Aliquam dictum<br> accumsan porttitor...</p>
            </div>
             <div> <strong>Update Pirvacy Policy</strong>
@@ -105,25 +105,33 @@
             <h2 class="tr">Trending</h2>
     <div class="trending">
         <div class="people">
-        <div><strong>@tegan</strong></div>
+        <img src="C:\Users\User\Downloads\ChatGPT Image Aug 24, 2025, 08_49_08 AM.png" alt="tegan" class="image">
+        <div><strong>@tegan</strong>
         <p>World Peace Builder</p>
         </div>
+        </div>
         <div class="people">
-        <div><strong>@morgan</strong></div>
+        <img src="C:\Users\User\Downloads\ChatGPT Image Aug 24, 2025, 08_17_53 AM.png" alt="Morgan Oakley" class="image">
+        <div ><strong>@morgan</strong>
         <p>Super Cool Project</p>
         </div>
-        <div class="people">
-        <div><strong>@Kendall</strong></div>
-        <p>Life Changing App</p>
         </div>
         <div class="people">
-        <div><strong>@alex</strong></div>
+          <img src="C:\Users\User\Downloads\ChatGPT Image Aug 24, 2025, 10_30_11 PM.png" alt="Kendall" class="image"> 
+        <div><strong>@Kendall</strong>
+        <p>Life Changing App</p>
+        </div>
+        </div>
+        <div class="people">
+          <img src="C:\Users\User\Downloads\ChatGPT Image Aug 24, 2025, 10_42_35 PM.png" alt="alex" class="image">
+        <div><strong>@alex</strong>
         <p>No Traffic Maker</p>
         </div>
     </div>
     </div>
     </div>
-  </div>
+    </div>
+    </div>
   </div>
   </div>
 </body>
